# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: Linter_and_Test.yml
page_loader/: __init__.py  cli.py  download.py  fs.py  html.py  html_processing.py  logger.py
page_loader/script/: main.py
page_loader/scripts/: loader.py  main.py
test/: test_page_donload.py
tests/: conftest.py  test_page_download.py
tests/fixtures/: another_page_to_be_loaded.html  expected.html  very_long_and_complicated_site_name.html
tests/fixtures/files/css/: style.css
