[tool.poetry]
name = "hexlet-code"
version = "0.20.0"
description = ""
authors = ["Николай Ануфриев <sch-nikolaj@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
progress = "^1.6"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.0.0"
requests-mock = "^1.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.loader:main"
