[tool.poetry]
name = "hexlet-code"
version = "0.20.0"
description = ""
authors = ["Николай Ануфриев <sch-nikolaj@yandex.ru>"]
repository = "https://github.com/sch0nik/python-project-lvl3"
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
progress = "^1.6"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.0.0"
requests-mock = "^1.9.3"
coverage = "^6.3.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.loader:main"
